fix segment default schemas
